# rust-practice

./: Cargo.toml  README.md  test_avoid_error.txt
.github/workflows/: rust.yml
algorithms/src/: lib.rs  main.rs  random_algorithms.rs  sorting_algorithms.rs
algorithms/src/random_algorithms/: structs.rs
algorithms/tests/: tests_random.rs  tests_random_algorithms.rs  tests_sorting_algorithms.rs
build_time_tooling/: Cargo.toml  build.rs
build_time_tooling/src/: main.rs
command_line/: Cargo.toml
command_line/src/: lib.rs
command_line/tests/: tests_command_line.rs
compression/src/: lib.rs
compression/tests/: tests_compression.rs
cryptography/: Cargo.toml
cryptography/src/: encryption.rs  hashing.rs  lib.rs
cryptography/tests/: tests_encryption.rs  tests_hashing.rs
data_structures/: Cargo.toml
data_structures/src/: custom_data_structures.rs  lib.rs
data_structures/tests/: tests_custom_data_structures.rs
database/: Cargo.toml  artist.csv  test.db
database/src/: lib.rs  postgres.rs  sqlite.rs
database/tests/: tests_postgres.rs  tests_sqlite.rs
date_time/: Cargo.toml
date_time/src/: duration_calculation.rs  lib.rs  parsing_displaying.rs
date_time/tests/: tests_duration_calculation.rs  tests_parsing_displaying.rs
development_tools/: Cargo.toml
development_tools/src/: configure_logging.rs  lib.rs  log_messages.rs  versioning.rs
development_tools/tests/: tests_configure_logging.rs  tests_log_messages.rs  tests_versioning.rs
encoding/: Cargo.toml
encoding/src/: character_sets.rs  csv_processing.rs  lib.rs  structured_data.rs
encoding/tests/: tests_character_sets.rs  tests_csv_processing.rs  tsts_structured_data.rs
error_handling/: Cargo.toml
error_handling/src/: error_handling.rs
error_handling/tests/: tests_error_handling.rs
file_system/: Cargo.toml  test_avoid_error.txt
file_system/src/: directory_traversal.rs  lib.rs  main.rs  read_write.rs
file_system/tests/: test_memory_map.txt  test_read.txt  tests_directory_traversal.rs  tests_read_write.rs
hardware_support/: Cargo.toml
hardware_support/src/: lib.rs
hardware_support/tests/: tests_processor.rs
memory_management/: Cargo.toml
memory_management/src/: constants.rs
memory_management/tests/: tests_constants.rs
networking/src/: main.rs
operating_system/: Cargo.toml  out.txt
operating_system/config/: .env
operating_system/src/: external_command.rs  lib.rs  main.rs
operating_system/tests/: tests_external_command.rs
science/: Cargo.toml
science/src/: lib.rs  mathematics.rs
science/tests/: tests_complex_numbers.rs  tests_linear_algebra.rs  tests_miscellaneous.rs  tests_statistics.rs  tests_trigonometry.rs
shared/: Cargo.toml
shared/src/: enums.rs  lib.rs  structs.rs  utils.rs
src/: lib.rs  main.rs
text_processing/: Cargo.toml
text_processing/src/: lib.rs  reg_exps.rs  regular_expressions.rs  string_parsing.rs
text_processing/tests/: tests_reg_exps.rs  tests_regular_expressions.rs  tests_string_parsing.rs
threads/: Cargo.toml
threads/src/: explicit_threads.rs  lib.rs  parallel_tasks.rs
threads/tests/: tests_explicit_threads.rs  tests_parallel_tasks.rs
web_programming/: Cargo.toml  message.txt
web_programming/src/: clients.rs  extracting_links.rs  lib.rs  media_types.rs  parse_url.rs  url.rs
web_programming/src/clients/: authentication.rs  calling_web_api.rs  downloads.rs  making_requests.rs
web_programming/tests/: tests_clients.rs  tests_extracting_links.rs  tests_media_types.rs  tests_url.rs
(+5 files in other folders)
