[package]
name = "rust_practice"
version = "0.1.0"
edition = "2021"
authors = ["Eduardo Aire Torres"]
description = "Practicing Rust."
license = "MIT"
keywords = ["practice"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["algorithms", "command_line", "compression", "shared", "threads"]

[dependencies]
algorithms = {path = "algorithms"}
command_line = {path = "command_line"}
compression = {path = "compression"}
lazy_static = "1.5.0"
shared = {path = "shared"}
threads = {path = "threads"}
