[package]
name = "rust_practice"
version = "0.1.0"
edition = "2021"
authors = ["Eduardo Aire Torres"]
description = "Practicing Rust."
license = "MIT"
keywords = ["practice"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["algorithms", "command_line", "compression", "cryptography", "shared", "threads"]

[dependencies]
algorithms = {path = "algorithms"}
command_line = {path = "command_line"}
compression = {path = "compression"}
cryptography = {path = "cryptography"}
shared = {path = "shared"}
threads = {path = "threads"}
dirs = "5.0.1"
lazy_static = "1.5.0"
rand = "0.8.5"
rayon = "1.10.0"
data-encoding = "2.6.0"
