[package]
name = "rust_practice"
version = "0.1.0"
edition = "2021"
authors = ["Eduardo Aire Torres"]
description = "Practicing Rust."
license = "MIT"
keywords = ["practice"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["algorithms", "build_time_tooling", "command_line", "compression", "cryptography", "data_structures", "database", "date_time", "development_tools", "encoding", "error_handling", "file_system", "hardware_support", "memory_management", "shared", "threads"]

[dependencies]
algorithms = {path = "algorithms"}
command_line = {path = "command_line"}
compression = {path = "compression"}
cryptography = {path = "cryptography"}
database = {path = "database"}
data_structures = {path = "data_structures"}
date_time = {path = "date_time"}
development_tools = {path = "development_tools"}
encoding = {path = "encoding"}
error_handling = {path = "error_handling"}
file_system = {path = "file_system"}
hardware_support = {path = "hardware_support"}
memory_management = {path = "memory_management"}
shared = {path = "shared"}
threads = {path = "threads"}
dirs = "5.0.1"
lazy_static = "1.5.0"
rand = "0.8.5"
rayon = "1.10.0"
data-encoding = "2.6.0"
ring = "0.17.8"
rusqlite = "0.31.0"
chrono = "0.4.38"
env_logger = "0.11.4"
log = "0.4.22"
