[package]
name = "web_programming"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
lazy_static = "1.5.0"
mime = "0.3.17"
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
select = "0.6.0"
tokio = { version = "1.40.0", features = ["full"] }
url = "2.5.2"
